[package]
name = "medtech-siem"
version = "0.1.0"  
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }
uuid = { version = "1", features = ["serde", "v4"] }
dotenvy = "0.15"